--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor pariatur ex
       itaque cum quis totam nemo eveniet, veritatis nostrum esse.
     </p>
+    <a href="#" class="link-arrow">Learn More</a>
   </body>
 </html>
