--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
     <link rel="stylesheet" href="css/normalize.css" />
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor pariatur ex
-      itaque cum quis totam nemo eveniet, veritatis nostrum esse.
-    </p>
-    <a href="#" class="link-arrow">Learn More</a>
+    <div style="width: 30%; padding: 4rem">
+      <div class="card card__secondary">
+        <header class="card__header">Card Title</header>
+        <div class="card__body">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis,
+          ipsam odio expedita quam aliquam nesciunt eligendi consequatur saepe
+          perspiciatis repudiandae.
+        </div>
+      </div>
+    </div>
   </body>
 </html>
