--- a/index.html
+++ b/index.html
@@ -16,16 +16,5 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/normalize.css" />
   </head>
-  <body>
-    <div style="width: 30%; padding: 4rem">
-      <div class="card card__secondary">
-        <header class="card__header">Card Title</header>
-        <div class="card__body">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis,
-          ipsam odio expedita quam aliquam nesciunt eligendi consequatur saepe
-          perspiciatis repudiandae.
-        </div>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
