--- a/index.html
+++ b/index.html
@@ -16,5 +16,12 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/normalize.css" />
   </head>
-  <body></body>
+  
+    <body>
+      <div class="input_group"></div>
+      <input type="text" class="input" placeholder="Enter Here ..." />
+      <button class="btn btn--accent">Search</button>
+    </div>
+    </body>
+  
 </html>
