--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/normalize.css" />
   </head>
-  
-    <body>
-      <div class="input_group"></div>
+
+  <body>
+    <div class="input_group">
       <input type="text" class="input" placeholder="Enter Here ..." />
       <button class="btn btn--accent">Search</button>
     </div>
-    </body>
-  
+  </body>
 </html>
