--- a/index.html
+++ b/index.html
@@ -17,10 +17,5 @@
     <link rel="stylesheet" href="css/normalize.css" />
   </head>
 
-  <body>
-    <div class="input_group">
-      <input type="text" class="input" placeholder="Enter Here ..." />
-      <button class="btn btn--accent">Search</button>
-    </div>
-  </body>
+  <body></body>
 </html>
