--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
     <link rel="stylesheet" href="css/normalize.css" />
   </head>
 
-  <body></body>
+  <body>
+    <span class="badge badge--primary">10% Off</span>
+    <span class="badge badge--secondary">10% Off</span>
+    <span class="badge badge--primary badge-small">10% Off</span>
+  </body>
 </html>
